--- a/hamiltonian/hamiltonian_cheatsheet.tex
+++ b/hamiltonian/hamiltonian_cheatsheet.tex
@@ -126,23 +126,23 @@
 \end{center}
 
 \section{Lagrangian Mechanics}
-The lagrangian of a system is a function of the coordinates $\mathbf{q}(t)$, the velocities $\mathbf{\dot q}(t)$, and time.
+The lagrangian of a system is a function of the coordinates $\vec{q}(t)$, the velocities $\dot{\vec q}(t)$, and time.
 \begin{equation}
 	L = T-V 
 \end{equation}
 
 The action of a system is the time integral of the lagrangian:
 \begin{equation}
-	S = \int L(\mathbf{ q}(t), \mathbf {\dot q}(t), t) dt
+	S = \int L(\vec{ q}(t), \vec {\dot q}(t), t) dt
 \end{equation}
 
 By varying the action, and finding a stable point, we get the Euler-Lagrange equations:
 \begin{equation}
-	\delta S = 0 = \int \left(\frac{\partial L}{\partial \mathbf{q}}\delta \mathbf{q} + \frac{\partial L}{\partial \mathbf{\dot q}} \delta \mathbf{\dot q}\right)dt = \int \left(\frac{\partial L}{\partial \mathbf{q}}-\frac{d}{dt} \frac{\partial L}{\partial \mathbf{\dot q}} \right)\delta \mathbf{q} dt
+	\delta S = 0 = \int \left(\frac{\partial L}{\partial \vec{q}}\delta \vec{q} + \frac{\partial L}{\partial \dot{\vec q}} \delta \dot{\vec q}\right)dt = \int \left(\frac{\partial L}{\partial \vec{q}}-\frac{d}{dt} \frac{\partial L}{\partial \dot{\vec q}} \right)\delta \vec{q} dt
 \end{equation}
 And we get the Euler-Lagrange equations:
 \begin{equation}
-	\frac{\partial L}{\partial \mathbf{q}}=\frac{d}{dt}\frac{\partial L}{\partial \mathbf{\dot q}}
+	\frac{\partial L}{\partial \vec{q}}=\frac{d}{dt}\frac{\partial L}{\partial \dot{\vec q}}
 \end{equation}
 
 The Euler-Lagrange equations are invariant under a change of the Lagrangian by a total time derivative:
@@ -155,53 +155,53 @@ By considering a point transformation to new coordinates $Q, \dot Q$: $Q(q, t), 
 \end{equation}
 Cancellation of dots.
 \section{Generalised Momenta}
-The Legendre transform conjugate to the velocities $\mathbf{\dot q}$ are the generalised momenta $\mathbf{p}$:
+The Legendre transform conjugate to the velocities $\dot{\vec q}$ are the generalised momenta $\vec{p}$:
 \begin{equation}
-	\frac{\partial L}{\partial \mathbf{\dot q}} = \mathbf {p}
+	\frac{\partial L}{\partial \dot{\vec q}} = \vec {p}
 \end{equation}
 If the Lagrangian is independent of a coordinate $q$, then this is called a cyclic coordinate, and the generalised momentum is conserved:
 \begin{equation}
 	\frac{\partial L}{\partial q} = \frac{d}{dt}\frac{\partial L}{\partial \dot q} = \dot p = 0
 \end{equation}
 \section{Noether's Theorem}
-If the Euler-Lagrange equations are invariant under some infinitesimal coordinate transform $\mathbf {q} \rightarrow \mathbf {q} + \epsilon \mathbf {w}(s_1, \mathellipsis, s_n, \mathbf{q}, t)$, then this transform changes the Lagrangian by a total time derivative. We can taylor expand in the infinitesimal $\epsilon$ to give:
+If the Euler-Lagrange equations are invariant under some infinitesimal coordinate transform $\vec {q} \rightarrow \vec {q} + \epsilon \vec {w}(s_1, \mathellipsis, s_n, \vec{q}, t)$, then this transform changes the Lagrangian by a total time derivative. We can taylor expand in the infinitesimal $\epsilon$ to give:
 \begin{equation}
-	L - \epsilon \frac{dG}{dt} = L + \epsilon\left(\frac{\partial L}{\partial \mathbf{q}}\cdot\mathbf{w} + \frac{\partial L}{\partial \mathbf{\dot q}}\cdot\mathbf{\dot w}\right) = L + \epsilon\frac{d}{dt}\left(\frac{\partial L}{\partial \mathbf{\dot q}}\cdot\mathbf{w}\right)
+	L - \epsilon \frac{dG}{dt} = L + \epsilon\left(\frac{\partial L}{\partial \vec{q}}\cdot\vec{w} + \frac{\partial L}{\partial \dot{\vec q}}\cdot\dot{\vec w}\right) = L + \epsilon\frac{d}{dt}\left(\frac{\partial L}{\partial \dot{\vec q}}\cdot\vec{w}\right)
 \end{equation}
 Which implies:
 \begin{equation}
-	I = G + \frac{\partial L}{\partial \mathbf{\dot q}}\cdot \mathbf{w} = \mathrm{constant}
+	I = G + \frac{\partial L}{\partial \dot{\vec q}}\cdot \vec{w} = \mathrm{constant}
 \end{equation}
 \section{The Hamiltonian}
 The Hamiltonian is the Legendre transform of the Lagrangian with respect to the velocity.
 \begin{equation}
-	H(\mathbf{q}, \mathbf{p}, t) = \frac{\partial L}{\partial \mathbf{\dot q}}\cdot \mathbf{\dot q} - L
+	H(\vec{q}, \vec{p}, t) = \frac{\partial L}{\partial \dot{\vec q}}\cdot \dot{\vec q} - L
 \end{equation}
 
 We can get Hamilton's equations by considering the differential of H:
 \begin{equation}
-	dH = \frac{\partial H}{\partial \mathbf{q}}\cdot d\mathbf{q} + \frac{\partial H}{\partial \mathbf{p}}\cdot d\mathbf{p} + \frac{\partial H}{\partial t}
+	dH = \frac{\partial H}{\partial \vec{q}}\cdot d\vec{q} + \frac{\partial H}{\partial \vec{p}}\cdot d\vec{p} + \frac{\partial H}{\partial t}
 \end{equation}
 \begin{equation}
-	dH = \mathbf{\dot q} \cdot d\mathbf{p} - \mathbf{\dot p} \cdot d\mathbf{q} - \frac{\partial L}{\partial t}
+	dH = \dot{\vec q} \cdot d\vec{p} - \dot{\vec p} \cdot d\vec{q} - \frac{\partial L}{\partial t}
 \end{equation}
 Equating the coefficients of the differentials, we get Hamilton's equations of motion:
 \begin{equation}
-	\mathbf v =
+	\vec v =
 	\frac{d}{dt}
 	\begin{pmatrix}
-		\mathbf{q} \\
-		\mathbf{p}
+		\vec{q} \\
+		\vec{p}
 		\end{pmatrix} = 
 		\begin{pmatrix}
-			\nabla_\mathbf{p}H \\ 
-		-\nabla_\mathbf{q}H
+			\nabla_{\vec{p}}H \\ 
+			-\nabla_{\vec{q}}H
 		\end{pmatrix}\mathrm{\ \ \ and\ \ \ } \frac{\partial H}{\partial t} = -\frac{\partial L}{\partial t}
 \end{equation}
 
-Where $\mathbf v$ is the phase space velocity. If the Hamiltonian is time-independent, then the motion in phase space lies along paths of constant energy:
+Where $\vec v$ is the phase space velocity. If the Hamiltonian is time-independent, then the motion in phase space lies along paths of constant energy:
 \begin{equation}
-	\mathbf {v}\cdot \nabla H = \nabla_\mathbf{p}H\cdot\nabla_\mathbf{q} H - \nabla_\mathbf{q}H\cdot\nabla_\mathbf{p} H = 0
+	\vec {v}\cdot \nabla H = \nabla_{\vec{p}}H\cdot\nabla_{\vec{q}} H - \nabla_{\vec{q}}H\cdot\nabla_{\vec{p}} H = 0
 \end{equation}
 \section{Liouville's Theorem}
 
@@ -209,28 +209,28 @@ The ``fluid'' system is incompressible in phase space, and if the Hamiltonian is
 
 Incompressibility is shown by:
 \begin{equation}
-	\nabla \cdot\mathbf{v} = \nabla_\mathbf{q}\cdot\nabla_\mathbf{p}H - \nabla_\mathbf{p}\cdot\nabla_\mathbf{q} H = 0
+	\nabla \cdot\vec{v} = \nabla_{\vec{q}}\cdot\nabla_{\vec{p}}H - \nabla_{\vec{p}}\cdot\nabla_{\vec{q}} H = 0
 \end{equation}
 The density $\rho$ obeys the equation:
 \begin{equation}
-	\frac{d\rho}{dt} = \frac{\partial \rho}{\partial t} + \nabla \cdot (\rho \mathbf{v}) = 0
+	\frac{d\rho}{dt} = \frac{\partial \rho}{\partial t} + \nabla \cdot (\rho \vec{v}) = 0
 \end{equation}
 The virial theorem tells us that when averaged over time:
 \begin{equation}
-	\overline{\mathbf{p}\cdot\frac{\partial H}{\partial \mathbf{p}}} = \overline{\mathbf{q}\cdot \frac{\partial H}{\partial \mathbf{q}}}
+	\overline{\vec{p}\cdot\frac{\partial H}{\partial \vec{p}}} = \overline{\vec{q}\cdot \frac{\partial H}{\partial \vec{q}}}
 \end{equation}
 \section{Qualitative Dynamics}
-Have systems described by a velocity $\mathbf {\dot r}$. These systems have fixed points at $\mathbf{\dot r}=\mathbf {0}$, which we call $\mathbf{r^*}$.
+Have systems described by a velocity $\vec {\dot r}$. These systems have fixed points at $\dot{\vec r}=\vec {0}$, which we call $\vec{r^*}$.
 
 We can expand linearly around these fixed points to find the behaviour of the system:
 \begin{equation}
-\dot r^i(\mathbf{r^*}+\delta\mathbf{r}) \approx \dot r^i(\mathbf{r^*}) + \left.\frac{\partial \dot r^i}{\partial x^j}\right|_{\mathbf{r^*}} \delta r^j = A^i_j \delta r^j 
+\dot r^i(\vec{r^*}+\delta\vec{r}) \approx \dot r^i(\vec{r^*}) + \left.\frac{\partial \dot r^i}{\partial x^j}\right|_{\vec{r^*}} \delta r^j = A^i_j \delta r^j 
 \end{equation}
 Where $x^i$ are the coordinates, and the matrix $A^i_j$ is the jacobian of the velocity vector.
 
-We can then look for solutions of $\delta \mathbf{\dot r}(t)=\mathbf{A}\delta\mathbf{r}$:
+We can then look for solutions of $\delta \dot{\vec r}(t)=\mathbf{A}\delta\vec{r}$:
 \begin{equation}
-	\lambda we^{\lambda t} = \mathbf{A}\mathbf{w}e^{\mathbf{A}t}
+	\lambda we^{\lambda t} = \mathbf{A}\vec{w}e^{\vec{A}t}
 \end{equation}
 And we have an eigenvalue equation:
 \begin{equation}
@@ -238,7 +238,7 @@ And we have an eigenvalue equation:
 \end{equation}
 And can work out the eigenvectors:
 \begin{equation}
-	(\mathbf{A}-\lambda_i\mathbf{I})\mathbf{w}_i = 0
+	(\mathbf{A}-\lambda_i\mathbf{I})\vec{w}_i = 0
 \end{equation}
 \subsection{Eigenvalue Behaviours}
 The behaviour of 2D systems for a range of eigenvalues is illstrated next.
@@ -246,8 +246,8 @@ The behaviour of 2D systems for a range of eigenvalues is illstrated next.
 For real and distinct eigenvalues, $\lambda_1\neq\lambda_2\neq0$, the system has the behaviours:
 \begin{center}
 \begin{tikzpicture}
-    \draw[->] (-1,0) -- (1,0) node[right] {$\mathbf{w}_1$};
-     \draw[->] (0,-1) -- (0,1) node[above] {$\mathbf{w}_2$};
+    \draw[->] (-1,0) -- (1,0) node[right] {$\vec{w}_1$};
+     \draw[->] (0,-1) -- (0,1) node[above] {$\vec{w}_2$};
 	%\draw[smooth, samples=100, domain=0:1] plot({\x*cos(360*\x)}, {\x*sin(360*\x)});
       \draw[smooth, samples=5, domain=0:1] plot({\x)}, {0.8*\x*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.6}];
       \draw[smooth, samples=5, domain=0:1] plot({-\x)}, {0.8*\x*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.6}];
@@ -258,8 +258,8 @@ For real and distinct eigenvalues, $\lambda_1\neq\lambda_2\neq0$, the system has
 	\node[draw] at (0, -1.3) {$\lambda_1>\lambda_2>0$};
 \end{tikzpicture}
 \begin{tikzpicture}
-    \draw[->] (-1,0) -- (1,0) node[right] {$\mathbf{w}_1$};
-     \draw[->] (0,-1) -- (0,1) node[above] {$\mathbf{w}_2$};
+    \draw[->] (-1,0) -- (1,0) node[right] {$\vec{w}_1$};
+     \draw[->] (0,-1) -- (0,1) node[above] {$\vec{w}_2$};
 	%\draw[smooth, samples=100, domain=0:1] plot({\x*cos(360*\x)}, {\x*sin(360*\x)});
      \draw[smooth, samples=5, domain=1:0] plot({0.8*\x*\x}, {\x}) [arrow inside={end=stealth,opt={scale=2}}{0.6}];
       \draw[smooth, samples=5, domain=1:0] plot({0.8*\x*\x}, {-\x}) [arrow inside={end=stealth,opt={scale=2}}{0.6}];
@@ -270,8 +270,8 @@ For real and distinct eigenvalues, $\lambda_1\neq\lambda_2\neq0$, the system has
 	\node[draw] at (0, -1.3) {$0>\lambda_1>\lambda_2$};
 \end{tikzpicture}
 \begin{tikzpicture}
-    \draw[->] (-1,0) -- (1,0) node[right] {$\mathbf{w}_1$};
-     \draw[->] (0,-1) -- (0,1) node[above] {$\mathbf{w}_2$};
+    \draw[->] (-1,0) -- (1,0) node[right] {$\vec{w}_1$};
+     \draw[->] (0,-1) -- (0,1) node[above] {$\vec{w}_2$};
 	%\draw[smooth, samples=100, domain=0:1] plot({\x*cos(360*\x)}, {\x*sin(360*\x)});
      \draw[smooth, samples=5, domain=0.2:1] plot({\x)}, {1/(5*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.6}];
      \draw[smooth, samples=5, domain=0.2:1] plot({-\x)}, {1/(5*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.6}];
@@ -289,8 +289,8 @@ An unstable repeller, a stable attractor and an unstable saddle point.
 For real degenerate eigenvalues, $\lambda_1=\lambda_2\neq0$:
 \begin{center}
 	\begin{tikzpicture}
-    \draw[->] (-1,0) -- (1,0) node[right] {$\mathbf{w}_1$};
-     \draw[->] (0,-1) -- (0,1) node[above] {$\mathbf{w}_2$};
+    \draw[->] (-1,0) -- (1,0) node[right] {$\vec{w}_1$};
+     \draw[->] (0,-1) -- (0,1) node[above] {$\vec{w}_2$};
 	%\draw[smooth, samples=100, domain=0:1] plot({\x*cos(360*\x)}, {\x*sin(360*\x)});
      \draw[smooth, samples=2, domain=0:1] plot({\x}, {\x}) [arrow inside={end=stealth,opt={scale=2}}{0.6}];
      \draw[smooth, samples=2, domain=0:1] plot({\x}, {0}) [arrow inside={end=stealth,opt={scale=2}}{0.6}];
@@ -303,8 +303,8 @@ For real degenerate eigenvalues, $\lambda_1=\lambda_2\neq0$:
 	\node[draw] at (0, -1.3) {$\lambda_1=\lambda_2>0$};
 	\end{tikzpicture}
 	\begin{tikzpicture}
-    \draw[->] (-1,0) -- (1,0) node[right] {$\mathbf{w}_1$};
-     \draw[->] (0,-1) -- (0,1) node[above] {$\mathbf{w}_2$};
+    \draw[->] (-1,0) -- (1,0) node[right] {$\vec{w}_1$};
+     \draw[->] (0,-1) -- (0,1) node[above] {$\vec{w}_2$};
 	%\draw[smooth, samples=100, domain=0:1] plot({\x*cos(360*\x)}, {\x*sin(360*\x)});
      \draw[smooth, samples=2, domain=1:0] plot({\x}, {\x}) [arrow inside={end=stealth,opt={scale=2}}{0.6}];
      \draw[smooth, samples=2, domain=1:0] plot({\x}, {0}) [arrow inside={end=stealth,opt={scale=2}}{0.6}];
@@ -324,22 +324,22 @@ It is easier to think polar coordinates in this case, with $\delta \dot r = \alp
 There are 3 types of fixed point in this case:
 \begin{center}
 	\begin{tikzpicture}
-    \draw[->] (-1,0) -- (1,0) node[right] {$\mathbf{w}_1$};
-     \draw[->] (0,-1) -- (0,1) node[above] {$\mathbf{w}_2$};
+    \draw[->] (-1,0) -- (1,0) node[right] {$\vec{w}_1$};
+     \draw[->] (0,-1) -- (0,1) node[above] {$\vec{w}_2$};
 	\draw[smooth, samples=15, domain=0:1] plot({\x*cos(360*\x)}, {\x*sin(360*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.25, 0.75}];
 	\draw[smooth, samples=15, domain=0:1] plot({-\x*cos(360*\x)}, {-\x*sin(360*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.25, 0.75}];
      \node[draw] at (0, -1.3) {$\alpha>0, \omega\neq0$};
 	\end{tikzpicture}
 	\begin{tikzpicture}
-    \draw[->] (-1,0) -- (1,0) node[right] {$\mathbf{w}_1$};
-     \draw[->] (0,-1) -- (0,1) node[above] {$\mathbf{w}_2$};
+    \draw[->] (-1,0) -- (1,0) node[right] {$\vec{w}_1$};
+     \draw[->] (0,-1) -- (0,1) node[above] {$\vec{w}_2$};
 	\draw[smooth, samples=15, domain=1:0] plot({\x*cos(360*\x)}, {\x*sin(360*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.25, 0.75}];
 	\draw[smooth, samples=15, domain=1:0] plot({-\x*cos(360*\x)}, {-\x*sin(360*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.25, 0.75}];
      \node[draw] at (0, -1.3) {$\alpha<0, \omega\neq0$};
 	\end{tikzpicture}
 	\begin{tikzpicture}
-    \draw[->] (-1,0) -- (1,0) node[right] {$\mathbf{w}_1$};
-     \draw[->] (0,-1) -- (0,1) node[above] {$\mathbf{w}_2$};
+    \draw[->] (-1,0) -- (1,0) node[right] {$\vec{w}_1$};
+     \draw[->] (0,-1) -- (0,1) node[above] {$\vec{w}_2$};
      \draw[smooth, samples=15, domain=1:0] plot({0.8*cos(360*\x)}, {0.8*sin(360*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.25, 0.75}];
 	\draw[smooth, samples=15, domain=1:0] plot({0.4*cos(360*\x)}, {0.4*sin(360*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.25, 0.75}];
      \node[draw] at (0, -1.3) {$\alpha=0, \omega\neq0$};
@@ -351,8 +351,8 @@ Can also have limit cycles, where instead of a fixed point, there might be a fix
 We would expand around this radius and evaluate the system there:
 \begin{center}
 	\begin{tikzpicture}
-    \draw[->] (-1,0) -- (1,0) node[right] {$\mathbf{w}_1$};
-     \draw[->] (0,-1) -- (0,1) node[above] {$\mathbf{w}_2$};
+    \draw[->] (-1,0) -- (1,0) node[right] {$\vec{w}_1$};
+     \draw[->] (0,-1) -- (0,1) node[above] {$\vec{w}_2$};
 	\draw[smooth, samples=15, domain=0:0.8] plot({\x*cos(360*\x)}, {\x*sin(360*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.25, 0.75}];
 	\draw[smooth, samples=15, domain=0:0.8] plot({-\x*cos(360*\x)}, {-\x*sin(360*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.25, 0.75}];
      \draw[smooth, samples=15, domain=0:1] plot({0.8*cos(360*\x)}, {0.8*sin(360*\x)}) [arrow inside={end=stealth,opt={scale=2}}{0.01, 0.5}];
@@ -361,19 +361,19 @@ We would expand around this radius and evaluate the system there:
 \subsection{Hamiltonian Behaviours}
 For Hamiltonian systems, we have $\lambda_\pm=\pm\sqrt{-|\mathbf{A}|}$, and so there are only \textbf{elliptic} fixed points for $|\mathbf{A}|>0$ and \textbf{hyperbolic} fixed points for $|\mathbf{A}|<0$.
 
-\section{Poisson Bracket}
-The poisson bracket of two functions $f$ and $g$ is defined in a coordinate system with positions and momenta $q^i, p_j$ as:
+\section{Poisson Brackets}
+The poisson bracket of two functions $f$ and $g$ is defined in a coordinate system with positions and momenta $\vec q, \vec p$ as:
 \begin{equation}	
 	\left\{f, g\right\}_{p, q} = \left(\frac{\partial f}{\partial q^i} \frac{\partial g}{\partial p_i}- \frac{\partial f}{\partial p_i} \frac{\partial g}{\partial q^i}\right)
 \end{equation}
 
-We have the equation of motion of an observable $A(q^i, p_j, t)$:
+We have the equation of motion of an observable $A(\vec q, \vec p, t)$:
 \begin{equation}
 	\frac{d A}{dt} = \left\{A, H\right\} + \frac{\partial A}{\partial t}
 \end{equation}
 Hamilton's equations of motion can be written:
 \begin{align}
-	\dot q^i &= \left\{q^i, H\right\} & \dot p_j &= \left\{p_j, H\right\}
+	\dot {\vec q} &= \left\{\vec{q}, H\right\} & \dot {\vec p} &= \left\{\vec{p}, H\right\}
 \end{align}
 If A is a constant of the motion:
 \begin{align}
@@ -381,30 +381,30 @@ If A is a constant of the motion:
 \end{align}
 If $u$ and $v$ are constants of motion, then $\left\{u, v\right\}$ is a constant of motion too.
 \section{Canonical Transformations}
-Canonical transformations are a transformation of the coordinates $\mathbf{q}, \mathbf{p}, H \rightarrow \mathbf{Q}(\mathbf{q}, \mathbf{p}, t), \mathbf{P}(\mathbf{q}, \mathbf{p}, t), K$ that satisfies:
+Canonical transformations are a transformation of the coordinates $\vec{q}, \vec{p}, H \rightarrow \vec{Q}(\vec{q}, \vec{p}, t), \vec{P}(\vec{q}, \vec{p}, t), K$ that satisfies:
 \begin{align}
-	\mathbf{\dot Q}&=\frac{\partial K}{\partial \mathbf{\dot{P}}} & \mathbf{\dot P}&=-\frac{\partial K}{\partial \mathbf{\dot Q}}
+	\dot{\vec Q}&=\frac{\partial K}{\partial \dot{\vec{P}}} & \dot{\vec P}&=-\frac{\partial K}{\partial \dot{\vec Q}}
 \end{align}
 Using the fact that the Euler-Lagrange equations are invariant under a total time derivative added to the Lagrangian, we find a generating function:
 \begin{equation}
-	\mathbf{p}\cdot\mathbf{\dot q}-H-(\mathbf{P}\cdot\mathbf{\dot Q}-K) = \frac{dF_1(\mathbf{q}, \mathbf{Q}, t)}{dt}
+	\vec{p}\cdot\dot{\vec q}-H-(\vec{P}\cdot\dot{\vec Q}-K) = \frac{dF_1(\vec{q}, \vec{Q}, t)}{dt}
 \label{eq:hamiltonian_kamiltonian}
 \end{equation}
-We can multiply equation \ref{eq:hamiltonian_kamiltonian} by $dt$ and look at the differential form of $F_1$ to see how to get $\mathbf{p}, \mathbf{P}$ from it:
+We can multiply equation \ref{eq:hamiltonian_kamiltonian} by $dt$ and look at the differential form of $F_1$ to see how to get $\vec{p}, \vec{P}$ from it:
 \begin{align}
-	dF_1 &= \mathbf{p}\cdot d\mathbf{q} - \mathbf{P}\cdot d\mathbf{Q} -(H-K)dt \\
-	dF_1 &= \frac{\partial F_1}{\partial \mathbf{q}}\cdot d\mathbf{q} + \frac{\partial F_1}{\partial \mathbf{Q}}\cdot d\mathbf{Q} + \frac{\partial F_1}{\partial t}dt
+	dF_1 &= \vec{p}\cdot d\vec{q} - \vec{P}\cdot d\vec{Q} -(H-K)dt \\
+	dF_1 &= \frac{\partial F_1}{\partial \vec{q}}\cdot d\vec{q} + \frac{\partial F_1}{\partial \vec{Q}}\cdot d\vec{Q} + \frac{\partial F_1}{\partial t}dt
 \end{align}
 Equating the coefficients:
 \begin{align}
-	\mathbf{p} &= \frac{\partial F_1}{\partial \mathbf{q}} & 
-	\mathbf{P} &= -\frac{\partial F_1}{\partial \mathbf{Q}} &
+	\vec{p} &= \frac{\partial F_1}{\partial \vec{q}} & 
+	\vec{P} &= -\frac{\partial F_1}{\partial \vec{Q}} &
 	K &= H + \frac{\partial F_1}{\partial t}
 \end{align}
 
-If we have two sets of coordinates: $\eta^i = (q^j, p^k)$ and $\zeta^i = (Q^j, P^k)$, then the transformation between them is canonical if and only if:
+If we have two sets of coordinates: $\vec\eta = (\vec q, \vec p)$ and $\vec\zeta = (\vec Q, \vec P)$, then the transformation between them is canonical if and only if:
 \begin{equation}
-	\left\{\zeta^i, \zeta^j\right\}_{\eta} = 
+	\left\{\zeta^i, \zeta^j\right\}_{\vec \eta} = 
 	\begin{pmatrix}
 		\mathbf{I} & \mathbf{0} \\
 		\mathbf{0} & -\mathbf{I} 
@@ -416,40 +416,40 @@ Where the $\mathbf{I}$ are block identity matrices.
 We can use generating functions of different combinations of $q, p, Q, P$. These are all related by a Legendre transform:
 
 \begin{align}
-	F_2(\mathbf{q}, \mathbf{P}) &= F_1(\mathbf{q},\mathbf{Q})+\mathbf{Q}\cdot\mathbf{P} \\
-	F_3(\mathbf{p}, \mathbf{Q}) &= F_1(\mathbf{q},\mathbf{Q})-\mathbf{q}\cdot \mathbf{p} \\
-	F_4(\mathbf{p}, \mathbf{P}) &= F_1(\mathbf{q},\mathbf{Q})-\mathbf{q}\cdot\mathbf{p}+\mathbf{Q}\cdot\mathbf{P}
+	F_2(\vec{q}, \vec{P}) &= F_1(\vec{q},\vec{Q})+\vec{Q}\cdot\vec{P} \\
+	F_3(\vec{p}, \vec{Q}) &= F_1(\vec{q},\vec{Q})-\vec{q}\cdot \vec{p} \\
+	F_4(\vec{p}, \vec{P}) &= F_1(\vec{q},\vec{Q})-\vec{q}\cdot\vec{p}+\vec{Q}\cdot\vec{P}
 \end{align}
 Under these generating functions, the equations for the other coordinates are:
 
 \begin{align}
-	F_1(\mathbf{q}, \mathbf{Q}): &&
-	\mathbf{p} &= \frac{\partial F_1}{\partial \mathbf{q}} & 
-	\mathbf{P} &= -\frac{\partial F_1}{\partial \mathbf{Q}} & \\
-	F_2(\mathbf{q}, \mathbf{P}): &&
-	\mathbf{p} &= \frac{\partial F_2}{\partial \mathbf{q}} & 
-	\mathbf{Q} &= \frac{\partial F_2}{\partial \mathbf{P}} & \\
-	F_3(\mathbf{p}, \mathbf{Q}): &&
-	\mathbf{q} &= -\frac{\partial F_3}{\partial \mathbf{p}} & 
-	\mathbf{P} &= -\frac{\partial F_3}{\partial \mathbf{Q}} & \\
-	F_4(\mathbf{p}, \mathbf{P}): &&
-	\mathbf{q} &= -\frac{\partial F_4}{\partial \mathbf{p}} & 
-	\mathbf{Q} &= \frac{\partial F_4}{\partial \mathbf{P}} &
+	F_1(\vec{q}, \vec{Q}): &&
+	\vec{p} &= \frac{\partial F_1}{\partial \vec{q}} & 
+	\vec{P} &= -\frac{\partial F_1}{\partial \vec{Q}} & \\
+	F_2(\vec{q}, \vec{P}): &&
+	\vec{p} &= \frac{\partial F_2}{\partial \vec{q}} & 
+	\vec{Q} &= \frac{\partial F_2}{\partial \vec{P}} & \\
+	F_3(\vec{p}, \vec{Q}): &&
+	\vec{q} &= -\frac{\partial F_3}{\partial \vec{p}} & 
+	\vec{P} &= -\frac{\partial F_3}{\partial \vec{Q}} & \\
+	F_4(\vec{p}, \vec{P}): &&
+	\vec{q} &= -\frac{\partial F_4}{\partial \vec{p}} & 
+	\vec{Q} &= \frac{\partial F_4}{\partial \vec{P}} &
 \end{align}
 
-Under transformations with generating functions of the form $F_1=\mathbf{q}\cdot\mathbf{Q}$ and $F_4=\mathbf{p}\cdot\mathbf{P}$, we can perform an exchange transformation, where the old coordinates become the new moment and vice-versa. With generating functions of the form $F_2=\mathbf{q}\cdot\mathbf{P}$ and $F_3=-\mathbf{p}\cdot\mathbf{Q}$, we get an identity transformation.
+Under transformations with generating functions of the form $F_1=\vec{q}\cdot\vec{Q}$ and $F_4=\vec{p}\cdot\vec{P}$, we can perform an exchange transformation, where the old coordinates become the new moment and vice-versa. With generating functions of the form $F_2=\vec{q}\cdot\vec{P}$ and $F_3=-\vec{p}\cdot\vec{Q}$, we get an identity transformation.
 \subsection{Infinitesimal Canonical Transformations}
 Consider canonical transformations close to the indentity:
 \begin{equation}
-	F_2(\mathbf{q}, \mathbf{P}, t) = \mathbf{q}\cdot\mathbf{P} + \epsilon G(\mathbf{q}, \mathbf{P}, t)
+	F_2(\vec{q}, \vec{P}, t) = \vec{q}\cdot\vec{P} + \epsilon G(\vec{q}, \vec{P}, t)
 \end{equation}
-$G(\mathbf{q}, \mathbf{P}, t)$ is the generator of the infinitesimal canonical transform.
+$G(\vec{q}, \vec{P}, t)$ is the generator of the infinitesimal canonical transform.
 Considering the changes in coordinates and momenta under this transformation, we have:
 \begin{align}
-	\delta \mathbf{q} &= \mathbf{Q}-\mathbf{q} &= \epsilon \frac{\partial G(\mathbf{q},\mathbf{P},t)}{\partial \mathbf{P}} &=\epsilon \frac{\partial G(\mathbf{q},\mathbf{p},t)}{\partial \mathbf{p}} + O(\epsilon^2) \\
-	\delta \mathbf{p} &= \mathbf{P}-\mathbf{p} &= -\epsilon \frac{\partial G(\mathbf{q},\mathbf{P},t)}{\partial \mathbf{q}}  &= -\epsilon \frac{\partial G(\mathbf{q},\mathbf{p},t)}{\partial \mathbf{q}} + O(\epsilon^2)
+	\delta \vec{q} &= \vec{Q}-\vec{q} &= \epsilon \frac{\partial G(\vec{q},\vec{P},t)}{\partial \vec{P}} &=\epsilon \frac{\partial G(\vec{q},\vec{p},t)}{\partial \vec{p}} + O(\epsilon^2) \\
+	\delta \vec{p} &= \vec{P}-\vec{p} &= -\epsilon \frac{\partial G(\vec{q},\vec{P},t)}{\partial \vec{q}}  &= -\epsilon \frac{\partial G(\vec{q},\vec{p},t)}{\partial \vec{q}} + O(\epsilon^2)
 \end{align}
-If some infinitesimal generator leaves the functional form of the Hamiltonian the same, then $H(\mathbf{Q}, \mathbf{P}, t) - H(\mathbf{q}, \mathbf{p}, t) = \epsilon\frac{\partial G}{\partial t}=-\epsilon\left\{G, H\right\}$, and the infinitesimal generator of the transformation is a constant of motion:
+If some infinitesimal generator leaves the functional form of the Hamiltonian the same, then $H(\vec{Q}, \vec{P}, t) - H(\vec{q}, \vec{p}, t) = \epsilon\frac{\partial G}{\partial t}=-\epsilon\left\{G, H\right\}$, and the infinitesimal generator of the transformation is a constant of motion:
 \begin{equation}
 	\frac{dG}{dt} = \left\{G, H\right\} + \frac{\partial G}{\partial t} = 0
 \end{equation}
@@ -463,16 +463,26 @@ And can build up the taylor expansion of $u(\alpha)$:
 \end{equation}
 
 \section{Hamilton-Jacobi Theory}
-Find a canonical transformation, $S(q^i, \alpha_j)$ that takes the coordinates $(q^i, p_j)$ to constant coordinates $(\beta^i, \alpha_j)$. We take the transformed Hamiltonian, $K(\beta^i, \alpha_j)=0$ to give the Hamilton-Jacobi equation:
+Find a canonical transformation, $S(\vec{q}, \vec \alpha)$ that takes the coordinates $(\vec q, \vec p)$ to constant coordinates $(\vec \beta, \vec \alpha)$. We take the transformed Hamiltonian, $K(\vec \beta, \vec \alpha)=0$ to give the Hamilton-Jacobi equation:
 \begin{equation}
-	H(q^i, \frac{\partial S}{\partial q^j}, t) + \frac{\partial S}{\partial t} = 0
+	H(\vec q, \frac{\partial S}{\partial \vec{q}}, t) + \frac{\partial S}{\partial t} = 0
 \end{equation}
 For systems of constant energy with separable coordinates, we can look for solutions of the form:
 \begin{equation}
-	S(q^i, \alpha_j, t) = \sum_i W_i(q^j, \alpha_k) - Et
+	S(\vec q, \vec \alpha, t) = \sum_i W_i(q_i, \vec \alpha) - Et
 \end{equation}
 
+Where each $W_i(q_i, \vec \alpha)$ is a function of a coordinate and the transformed momenta.
+
+\subsection{Constants of Motion}
+Some function of coordinates $I(q, p)$ is a constant of motion if and only if $\left\{I, H\right\}=0$
+
+If a set of constants of motion, $\mathcal{C}=\{I_i(q, p)\}$, all mutually commute ($\{I_i, I_j\} = 0,$ $\forall I_i, I_j \in \mathcal{C}$), then they are said to be in \textbf{involution} 
+\subsection{Liouville's Theorem on Integrability}
+If the phase space of some Hamiltonian with $f$ degrees of freedom is bounded, and there are $f$ constants of motion $\alpha_i$ in involution, then the motion in the new coordinates $\beta^i$ has constant velocity $\dot\beta^i=\frac{\partial H(\vec\alpha)}{\partial \alpha_i}=\omega^i$, and the system evolves on $f$-dimensional tori in the new coordinates.
+\subsection{Action-Angle Coordinates}
 \end{document}
+
 \end{verbatim}
 
 \rule{0.3\linewidth}{0.25pt}
