Add action angle

--- a/hamiltonian/hamiltonian_cheatsheet.tex
+++ b/hamiltonian/hamiltonian_cheatsheet.tex
@@ -481,6 +481,10 @@ If a set of constants of motion, $\mathcal{C}=\{I_i(q, p)\}$, all mutually commu
 \subsection{Liouville's Theorem on Integrability}
 If the phase space of some Hamiltonian with $f$ degrees of freedom is bounded, and there are $f$ constants of motion $\alpha_i$ in involution, then the motion in the new coordinates $\beta^i$ has constant velocity $\dot\beta^i=\frac{\partial H(\vec\alpha)}{\partial \alpha_i}=\omega^i$, and the system evolves on $f$-dimensional tori in the new coordinates.
 \subsection{Action-Angle Coordinates}
+Can define an Action variable $J_i$ for each of the coordinates $q_i$:
+\begin{equation}
+	J_i = \frac{1}{2\pi}\oint_{\mathrm{cycle}}p_idq_i
+\end{equation}
 \end{document}
 
 \end{verbatim}
